# hexa_rrt_slam

./: README.md
hector_gazebo-kinetic-devel/hector_gazebo_worlds/launch/: modified_world.launch
hector_gazebo-kinetic-devel/hector_gazebo_worlds/worlds/: modified.world  small_city.world
hector_quadrotor-kinetic-devel/hector_quadrotor_demo/launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo.launch
hector_quadrotor-kinetic-devel/hector_quadrotor_demo/rviz_cfg/: indoor_slam.rviz
hector_quadrotor-kinetic-devel/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
hector_slam-catkin/hector_mapping/launch/: mapping_default.launch
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/scripts/: compute_coverage.py  config.json  debug.py  debug_offboard.py  debug_publish.py  debug_subscribe.py  debug_tf.py  global_planning.py  global_planning_function.py  load_parameter.py  local_planning.py  obstacle_avoidance.py  obstacle_avoidancev2.py  obstacle_avoidancev2_rrtstar.py  obstacle_avoidancev3.py  obstacle_avoidancev4.py  rrt_star_2d_with_random_obstacles.py  test_marker.py  test_multi_rrt.py  test_multi_rrt_star_v2.py  test_multi_rrtv2.py
obstacle_avoidance/scripts/src/: agent.py
obstacle_avoidance/scripts/src/rrt/: heuristics.py  rrt.py  rrt_star.py
obstacle_avoidance/scripts/txt/: error_pos_x.txt  error_pos_y.txt  error_pos_z.txt
obstacle_avoidance/src/: simple_debug.cpp
